# hmk1

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  artifact.md  cosign.bundle  cosign_sign_dash_blob_help.txt  cyclonedx-sbom.json  dummy.json  main.py  merkle_proof.py  pyproject.toml  requirements.txt  sbom.bundle  test.txt
.github/: README-GITHUB.md
.github/workflows/: cd.yml  ci.yml  scorecard.yml
docs/: CODEOWNERS
hmk1/: main.py  merkle_proof.py  util.py
tests/: test_artifact_correct.py  test_artifact_wrong.py  test_checkpoint.py  test_consistency.py  test_consistency_no_root.py  test_consistency_no_tree_id.py  test_consistency_no_tree_size.py  test_default_inclusion.py  test_sanity.py  test_tree_size_error.py
