[tool.poetry]
name = "hmk1"
version = "0.1.0"
description = "Poetry package management"
authors = ["123R3N321 <jr5887@nyu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.13.0"
autodocstrings = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
